Add Unity WebGL build

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/new scawy gam webgl 8.loader.js";
+      var loaderUrl = buildUrl + "/very scawy gam 8.loader.js";
       var config = {
-        dataUrl: buildUrl + "/new scawy gam webgl 8.data",
-        frameworkUrl: buildUrl + "/new scawy gam webgl 8.framework.js",
-        codeUrl: buildUrl + "/new scawy gam webgl 8.wasm",
+        dataUrl: buildUrl + "/very scawy gam 8.data",
+        frameworkUrl: buildUrl + "/very scawy gam 8.framework.js",
+        codeUrl: buildUrl + "/very scawy gam 8.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Gamermaskguy",
         productName: "New scawy game",
